# miscbox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  justfile  w
src/: argparse.c  argparse.h  die.cpp  die.h  error.c  error.h  main.c  main.cpp  misc.c  utils.c  utils.h
src/base/: argparse.c  args.cpp  args.hpp  common.hpp  error.c
src/include/: argparse.h  common.h  error.h  utils.h
src/utils/: util_list.h  utils.c  utils.list
src/utils/die/: die.c  die.cpp  die.h  die.hpp  entry.h  sig_defs.h
src/utils/tables/: elements.h  tables.c
test/: common.sh  die.sh  run_test
